append push / pop functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_C_STANDARD 99)
 add_executable(program main.c
         libs/data_structures/vector/vector.c
         libs/data_structures/vector/vector.h
-        )
+        libs/data_structures/vector/test.h
+        libs/data_structures/vector/test.c)
 
 
 
